<resources>
    <string name="app_name">MyJavaApplication</string>
    <string name="Show">Восстановить</string>
    <string name="Execute">Очистить</string>
    <string name="Hello">Привет, Мир!</string>
    <string name="edit">Edit</string>
    <string name="Validate">Validate</string>
    <string name="phone">phone</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="password_conf">password_conf</string>
    <string name="login">login</string>
    <string name="enter_login">Enter login</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_phone">Enter phone</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_password_conf">Enter password_conf</string>
    <string name="passwords_incorrect">Passwords are incorrect</string>
    <string name="validation_ok">Validation OK</string>
    <string name="incorrect_email">incorrect email</string>
    <string name="incorrect_phone">incorrect phone format, ex.: +3809512312312</string>
    <string name="phone_invalid">phone has invalid format</string>
</resources>
