<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myjavaapplication.MainActivity">

    <EditText
        android:id="@+id/login"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/email"
        android:layout_marginTop="56dp"
        android:hint="@string/login"
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:id="@+id/email"
        android:layout_below="@+id/login"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/phone"
        android:layout_below="@+id/email"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:maxLines="1"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone" />

    <EditText
        android:id="@+id/password"
        android:layout_below="@+id/phone"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:maxLines="1"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/password_conf"
        android:layout_below="@+id/password"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:maxLines="1"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_conf" />

    <Button
        android:id="@+id/btnValidate"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_conf"
        android:layout_centerHorizontal="true"
        android:text="@string/Validate"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="179dp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnValidate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="" />

</RelativeLayout>